--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,17 @@
 version: 2
 jobs:
 
+  build:
+    machine:
+      image: circleci/classic:latest
+      docker_layer_caching: true
+    working_directory: ~/bitcore
+    steps:
+      - checkout
+      - run:
+          name: Build Docker Compose Images
+          command: npm run test:ci:build
+
   bitcore-wallet-service:
     machine:
       image: circleci/classic:latest
@@ -106,13 +117,31 @@ workflows:
   version: 2
   build-test-and-deploy:
     jobs:
-      - bitcore-wallet-client
-      - bitcore-wallet-service
-      - bitcore-node
-      - bitcore-lib
-      - bitcore-lib-cash
-      - bitcore-p2p
-      - bitcore-p2p-cash
-      - bitcore-payment-protocol
-      - bitcore-mnemonic
-
+      - build
+      - bitcore-wallet-client:
+          requires:
+            - build
+      - bitcore-wallet-service:
+          requires:
+            - build
+      - bitcore-node:
+          requires:
+            - build
+      - bitcore-lib:
+          requires:
+            - build
+      - bitcore-lib-cash:
+          requires:
+            - build
+      - bitcore-p2p:
+          requires:
+            - build
+      - bitcore-p2p-cash:
+          requires:
+            - build
+      - bitcore-payment-protocol:
+          requires:
+            - build
+      - bitcore-mnemonic:
+          requires:
+            - build
