More repos should run under ci. Fixed some issues with projects assuming the mongo location

--- a/packages/bitcore-p2p/package.json
+++ b/packages/bitcore-p2p/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "gulp lint",
     "test": "gulp test",
+    "test:ci": "npm run test",
     "coverage": "gulp coverage",
     "build": "gulp"
   },
