Enabling More Packages + Bitcore - Build (#1838)
* Trying paralell tests and seperate build and test jobs

* Build doesn't need to be paralell, just tests

* Adding workflow

* Reverting workflow

* Trying a fanout workflow

* Build step is pointless

* Bitcore-Build issue with browserSkip

* Seems like skipping the build does mess it up

* Fixing bitcore-wallet-client for docker tests

* Adding bwc to ci

* More repos should run under ci. Fixed some issues with projects assuming the mongo location

* Reverting circle to basic single thread

* Reverting readme

--- a/packages/bitcore-p2p/package.json
+++ b/packages/bitcore-p2p/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "gulp lint",
-    "test": "gulp test:node",
+    "test": "gulp test",
+    "test:ci": "npm run test",
     "coverage": "gulp coverage",
     "build": "gulp"
   },
@@ -28,7 +29,7 @@
     "bitcore-build": "^8.0.0",
     "brfs": "^1.2.0",
     "chai": "~1.10.0",
-    "gulp": "^3.8.10",
+    "gulp": "^4.0.0",
     "sinon": "^1.12.2"
   },
   "license": "MIT"
