--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -18,10 +18,7 @@
     "API"
   ],
   "config": {
-    "ionic_webpack": "webpack.config.js",
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+    "ionic_webpack": "webpack.config.js"
   },
   "prettier": {
     "singleQuote": true
@@ -59,29 +56,21 @@
     "@angular/platform-browser-dynamic": "4.1.3",
     "@angular/router": "4.1.3",
     "@ionic-native/core": "3.10.2",
-    "@ionic-native/splash-screen": "3.10.2",
-    "@ionic-native/status-bar": "3.10.2",
-    "@ionic/storage": "2.0.1",
     "angular2-moment": "^1.6.0",
     "angular2-qrcode": "^2.0.1",
     "bitcore-lib": "^0.16.0",
     "bitcore-lib-cash": "^0.19.0",
-    "cz-conventional-changelog": "^2.1.0",
     "ionic-angular": "3.4.2",
     "ionicons": "3.0.0",
-    "node-sass": "^4.11.0",
-    "npm-run-all": "^4.1.5",
     "prettier": "^1.14.3",
     "rxjs": "5.4.0",
-    "standard-version": "^4.4.0",
     "sw-toolbox": "3.6.0",
-    "tslint-angular": "^1.1.2",
-    "tslint-config-prettier": "^1.15.0",
+    
     "zone.js": "0.8.12"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.4",
-    "@ionic/app-scripts": "1.3.7",
+    "@ionic/app-scripts": "3.2.1",
     "@types/jasmine": "2.5.41",
     "@types/node": "7.0.4",
     "codecov": "2.2.0",
@@ -94,13 +83,14 @@
     "karma-coverage-istanbul-reporter": "1.2.1",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "ng": "0.0.0",
     "opn-cli": "^3.1.0",
     "protractor": "5.1.2",
     "serve": "^10.0.1",
     "serve-static": "1.12.3",
     "ts-node": "3.0.4",
     "tslint": "5.3.2",
+    "tslint-angular": "^1.1.2",
+    "tslint-config-prettier": "^1.15.0",
     "tslint-eslint-rules": "4.1.1",
     "typescript": "2.3.3",
     "webdriver-manager": "^12.1.1",
