Fix load local server

--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -30,10 +30,10 @@
     "serve:prod": "npm run build:prod && npm run serve",
     "serve": "./node_modules/.bin/serve www",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve",
+    "ionic:serve": "ionic-app-scripts serve --port 8200",
     "e2e": "ionic-app-scripts build && protractor",
     "postinstall": "./node_modules/.bin/webdriver-manager update --gecko false",
-    "start": "ionic serve",
+    "start": "npm run ionic:serve",
     "test": "./node_modules/@angular/cli/bin/ng test --code-coverage",
     "test:unit-e2e": "ng test --watch=false --code-coverage --browsers ChromeHeadless && npm run e2e --browsers ChromeHeadless",
     "!test:ci": "./node_modules/.bin/ng test --watch=false --code-coverage --browsers ChromeHeadless",
