--- a/packages/bitcore-wallet-service/package.json
+++ b/packages/bitcore-wallet-service/package.json
@@ -24,6 +24,7 @@
     "async": "^0.9.2",
     "bitcore-lib": "^8.0.0",
     "bitcore-lib-cash": "^8.0.0",
+    "bitcore-stealth": "0.0.2",
     "body-parser": "^1.11.0",
     "compression": "^1.6.2",
     "email-validator": "^1.0.1",
