--- a/packages/bitcore-wallet-client/package.json
+++ b/packages/bitcore-wallet-client/package.json
@@ -30,6 +30,7 @@
     "bitcore-lib-cash": "^8.0.0",
     "bitcore-mnemonic": "^8.0.0",
     "bitcore-payment-protocol": "^8.0.0",
+    "bitcore-stealth": "0.0.2",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^4.17.11",
     "preconditions": "^2.2.1",
