--- a/packages/insight-previous/src/manifest.json
+++ b/packages/insight-previous/src/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Ionic",
-  "short_name": "Ionic",
+  "name": "Insight",
+  "short_name": "Insight",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
-    "src": "assets/imgs/logo.png",
-    "sizes": "512x512",
+    "src": "assets/img/logo.png",
+    "sizes": "250x250",
     "type": "image/png"
   }],
   "background_color": "#4e8ef7",
