--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -22,50 +22,39 @@
   },
   "scripts": {
     "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
     "build:prod": "CHAIN=BTC NETWORK=mainnet API_PREFIX=https://api.bitcore.io/api npm run ionic:build",
     "serve:prod": "npm run build:prod && npm run serve",
-    "serve": "./node_modules/.bin/serve www",
+    "serve": "serve www",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve --port 8200",
-    "e2e": "ionic-app-scripts build && protractor",
     "postinstall": "./node_modules/.bin/webdriver-manager update --gecko false",
     "start": "npm run ionic:serve",
-    "test": "./node_modules/@angular/cli/bin/ng test --code-coverage",
-    "test:unit-e2e": "ng test --watch=false --code-coverage --browsers ChromeHeadless && npm run e2e --browsers ChromeHeadless",
-    "!test:ci": "./node_modules/.bin/ng test --watch=false --code-coverage --browsers ChromeHeadless",
-    "cov": "opn coverage/index.html",
-    "lint": "run-s lint:*",
+    "test": "ng test --watch=false --code-coverage --no-progress",
     "lint:ng": "ng lint",
     "lint:prettier": "prettier '{*,**/*}.{js,ts,md,json,css}' --list-different",
-    "fix": "run-s fix:*",
     "fix:prettier": "prettier '{*,**/*}.{js,ts,md,json,css}' --write",
     "fix:tslint": "tslint --fix --project ."
   },
   "dependencies": {
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@angular/router": "4.1.3",
-    "@ionic-native/core": "3.10.2",
-    "angular2-moment": "^1.6.0",
-    "angular2-qrcode": "^2.0.1",
-    "bitcore-lib": "^0.16.0",
-    "bitcore-lib-cash": "^0.19.0",
+    "@angular/common": "4.4.7",
+    "@angular/compiler": "4.4.7",
+    "@angular/core": "4.4.7",
+    "@angular/forms": "4.4.7",
+    "@angular/http": "4.4.7",
+    "@angular/platform-browser": "4.4.7",
+    "@angular/platform-browser-dynamic": "4.4.7",
+    "angular2-moment": "1.6.0",
+    "angular2-qrcode": "2.0.1",
+    "bitcore-lib": "0.16.0",
+    "bitcore-lib-cash": "0.19.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "prettier": "^1.14.3",
     "rxjs": "5.5.12",
-    "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.4",
+    "@angular/compiler-cli": "4.4.7",
     "@ionic/app-scripts": "3.2.1",
     "@types/jasmine": "2.5.41",
     "@types/node": "7.0.4",
@@ -79,16 +68,15 @@
     "karma-coverage-istanbul-reporter": "1.2.1",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "opn-cli": "^3.1.0",
-    "protractor": "5.1.2",
-    "serve": "^10.0.1",
+    "prettier": "^1.14.3",
+    "serve": "^10.1.1",
     "serve-static": "1.12.3",
     "ts-node": "3.0.4",
     "tslint": "5.3.2",
     "tslint-angular": "^1.1.2",
     "tslint-config-prettier": "^1.15.0",
     "tslint-eslint-rules": "4.1.1",
-    "typescript": "2.3.3",
+    "typescript": "2.9.2",
     "webdriver-manager": "^12.1.1"
   },
   "engines": {
