--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -33,7 +33,7 @@
     "lint:ng": "ng lint",
     "lint:prettier": "prettier '{*,**/*}.{js,ts,md,json,css}' --list-different",
     "fix:prettier": "prettier '{*,**/*}.{js,ts,md,json,css}' --write",
-    "fix:tslint": "tslint --fix --project ."
+    "fix:tslint": "tslint --type-check --fix --project ."
   },
   "dependencies": {
     "@angular/common": "4.4.7",
