--- a/packages/insight-previous/src/tsconfig.spec.json
+++ b/packages/insight-previous/src/tsconfig.spec.json
@@ -2,19 +2,9 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/spec",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": [
-      "jasmine",
-      "node"
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "types": ["jasmine", "node"]
   },
-  "files": [
-    "test.ts"
-  ],
-  "include": [
-    "**/*.spec.ts",
-    "**/*.d.ts"
-  ]
+  "files": ["test.ts"],
+  "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
