--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -47,6 +47,7 @@
     "bitcore-lib-cash": "0.19.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "lodash": "4.17.11",
     "rxjs": "5.5.12",
     "zone.js": "0.8.12"
   },
@@ -55,6 +56,7 @@
     "@angular/compiler-cli": "4.4.7",
     "@ionic/app-scripts": "3.2.1",
     "@types/jasmine": "2.5.41",
+    "@types/lodash": "4.14.104",
     "@types/node": "7.0.4",
     "codecov": "2.2.0",
     "ionic": "4.1.2",
