--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -20,9 +20,9 @@
     "JSONStream": "~1.3.1",
     "async": "^2.5.0",
     "bcrypt": "^2.0.1",
-    "bitcore-lib": "^8.0.0",
-    "bitcore-lib-cash": "^8.0.0",
-    "bitcore-mnemonic": "^8.0.0",
+    "bitcore-lib": "file:../bitcore-lib",
+    "bitcore-lib-cash": "file:../bitcore-lib-cash",
+    "bitcore-mnemonic": "file:../bitcore-mnemonic",
     "commander": "^2.15.1",
     "leveldown": "^3.0.0",
     "levelup": "^2.0.2",
