--- a/packages/bitcore-lib-cash/package.json
+++ b/packages/bitcore-lib-cash/package.json
@@ -35,7 +35,7 @@
     "request": "browser-request"
   },
   "dependencies": {
-    "bitcore-lib": "^8.0.0",
+    "bitcore-lib": "file:../bitcore-lib",
     "bn.js": "=4.11.8",
     "bs58": "^4.0.1",
     "buffer-compare": "=1.1.1",
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "base-x": "=3.0.4",
-    "bitcore-build": "^8.0.0",
+    "bitcore-build": "file:../bitcore-build",
     "brfs": "^2.0.1",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
