--- a/packages/bitcore-lib/package.json
+++ b/packages/bitcore-lib/package.json
@@ -43,7 +43,7 @@
     "lodash": "=4.17.11"
   },
   "devDependencies": {
-    "bitcore-build": "^8.0.0",
+    "bitcore-build": "file:../bitcore-build",
     "brfs": "^2.0.1",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
