--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -71,11 +71,11 @@
   "dependencies": {
     "JSONStream": "~1.3.1",
     "async": "^2.5.0",
-    "bitcore-client": "^8.0.0",
-    "bitcore-lib": "^8.0.0",
-    "bitcore-lib-cash": "^8.0.0",
-    "bitcore-p2p": "^8.0.0",
-    "bitcore-p2p-cash": "^8.0.0",
+    "bitcore-client": "file:../bitcore-client",
+    "bitcore-lib": "file:../bitcore-lib",
+    "bitcore-lib-cash": "file:../bitcore-lib-cash",
+    "bitcore-p2p": "file:../bitcore-p2p",
+    "bitcore-p2p-cash": "file:../bitcore-p2p-cash",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
