--- a/packages/bitcore-payment-protocol/package.json
+++ b/packages/bitcore-payment-protocol/package.json
@@ -56,10 +56,10 @@
     "bs58": "^4.0.1",
     "jsrsasign": "^8.0.12",
     "protobufjs": "=5.0.3",
-    "bitcore-lib": "^8.0.0"
+    "bitcore-lib": "file:../bitcore-lib"
   },
   "devDependencies": {
-    "bitcore-build": "^8.0.0",
+    "bitcore-build": "file:../bitcore-build",
     "brfs": "^2.0.1",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
