--- a/packages/bitcore-wallet-service/package.json
+++ b/packages/bitcore-wallet-service/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "async": "^0.9.2",
-    "bitcore-lib": "^8.0.0",
-    "bitcore-lib-cash": "^8.0.0",
+    "bitcore-lib": "file:../bitcore-lib",
+    "bitcore-lib-cash": "file:../bitcore-lib-cash",
     "body-parser": "^1.11.0",
     "compression": "^1.6.2",
     "email-validator": "^1.0.1",
