--- a/packages/bitcore-wallet/package.json
+++ b/packages/bitcore-wallet/package.json
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "async": "^2.5.0",
-    "bitcore-lib": "^8.0.0",
-    "bitcore-wallet-client": "^8.0.0",
+    "bitcore-lib": "file:../bitcore-lib",
+    "bitcore-wallet-client": "file:../bitcore-wallet-client",
     "commander": "^2.6.0",
     "lodash": "^3.3.1",
     "moment": "^2.9.0",
