--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -29,6 +29,7 @@
     "test:ci": "npm run test",
     "test:ci:integration": "npm run test:integration",
     "verify:rpc": "npm run tsc:test && node ./build/test/verification/rpc-verify.js",
+    "repair:db": "npm run tsc:test && node ./build/test/verification/db-repair.js",
     "verify:db": "npm run tsc:test && node ./build/test/verification/db-verify.js",
     "test:unit": "npm run tsc:test && node ./build/test/runners/unit.js",
     "test:integration": "npm run tsc:test && node ./build/test/runners/integration.js",
