--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -27,14 +27,10 @@
     "test": "npm run tsc && node ./build/test/runners/unit.js && node ./build/test/runners/integration.js",
     "test:ci": "npm run test",
     "test:ci:integration": "npm run test:integration",
-    "verify:rpc": "npm run tsc:test && node ./build/test/verification/rpc-verify.js",
-    "repair:db": "npm run tsc:test && node ./build/test/verification/db-repair.js",
-    "verify:db": "npm run tsc:test && node ./build/test/verification/db-verify.js",
-    "test:unit": "npm run tsc:test && node ./build/test/runners/unit.js",
-    "test:integration": "npm run tsc:test && node ./build/test/runners/integration.js",
+    "repair:db": "npm run tsc && node ./build/test/verification/db-repair.js",
     "verify:rpc": "npm run tsc && node ./build/test/verification/rpc-verify.js",
     "verify:db": "npm run tsc && node ./build/test/verification/db-verify.js",
-    "resync":"npm run tsc && node ./build/test/verification/resync.js",
+    "resync": "npm run tsc && node ./build/test/verification/resync.js",
     "test:unit": "npm run tsc && node ./build/test/runners/unit.js",
     "test:integration": "npm run tsc && node ./build/test/runners/integration.js",
     "benchmark": "npm run tsc && node build/test/benchmark/benchmark.js"
