Fix Material Design for all devices. Down CSS file more than 50%

--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -17,6 +17,9 @@
     "bitcore",
     "API"
   ],
+  "config": {
+    "ionic_sass": "./sass.js"
+  },
   "prettier": {
     "singleQuote": true
   },
