--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "clean": "ionic-app-scripts clean",
-    "build:prod": "ENV=prod CHAIN=BTC NETWORK=mainnet API_PREFIX=https://api.bitcore.io/api npm run ionic:build",
+    "build:prod": "ENV=prod CHAIN=BTC NETWORK=mainnet API_PREFIX=https://api.bitcore.io/api npm run ionic:build --prod",
     "serve:prod": "npm run clean && npm run build:prod && npm run serve",
     "serve": "serve www",
     "ionic:build": "ionic-app-scripts build",
@@ -78,7 +78,7 @@
     "tslint-angular": "^1.1.2",
     "tslint-config-prettier": "^1.15.0",
     "tslint-eslint-rules": "4.1.1",
-    "typescript": "2.9.2",
+    "typescript": "2.6.2",
     "webdriver-manager": "^12.1.1"
   },
   "engines": {
