--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "clean": "rm -rf ts_build",
+    "watch": "./node_modules/.bin/tsc --watch",
     "compile": "npm run clean && ./node_modules/.bin/tsc",
     "test": "mocha ./test/unit"
   },
@@ -20,10 +21,12 @@
     "JSONStream": "~1.3.1",
     "async": "^2.5.0",
     "bcrypt": "^2.0.1",
+    "bcryptjs": "^2.4.3",
     "bitcore-lib": "^8.0.0",
     "bitcore-lib-cash": "^8.0.0",
     "bitcore-mnemonic": "^8.0.0",
     "commander": "^2.15.1",
+    "level-js": "^4.0.0",
     "leveldown": "^3.0.0",
     "levelup": "^2.0.2",
     "mkdirp": "^0.5.1",
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^10.12.15",
     "@types/request": "^2.48.1",
     "@types/request-promise-native": "^1.0.15",
