--- a/packages/bitcore-wallet-ui/package.json
+++ b/packages/bitcore-wallet-ui/package.json
@@ -8,6 +8,8 @@
     "@types/react-dom": "16.0.11",
     "@types/react-router-dom": "^4.3.1",
     "@types/semantic-ui": "^2.2.6",
+    "@types/socket.io-client": "^1.4.32",
+    "bitcore-client": "8.0.0",
     "history": "^4.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -16,8 +18,8 @@
     "react-scripts": "2.1.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0",
+    "socket.io-client": "^2.2.0",
     "typescript": "3.2.4",
-    "bitcore-client": "8.0.0",
     "web3": "^1.0.0-beta.41"
   },
   "scripts": {
