--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -26,6 +26,8 @@
     "bitcore-lib-cash": "^8.0.0",
     "bitcore-mnemonic": "^8.0.0",
     "commander": "^2.15.1",
+    "elliptic": "^6.4.1",
+    "ethereumjs-util": "^6.0.0",
     "level-js": "^4.0.0",
     "leveldown": "^3.0.0",
     "levelup": "^2.0.2",
@@ -39,6 +41,8 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/elliptic": "^6.4.3",
+    "@types/ethereumjs-util": "^5.2.0",
     "@types/node": "^10.12.15",
     "@types/request": "^2.48.1",
     "@types/request-promise-native": "^1.0.15",
