--- a/packages/bitcore-wallet-ui/package.json
+++ b/packages/bitcore-wallet-ui/package.json
@@ -2,6 +2,12 @@
   "name": "bitcore-wallet-ui",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
@@ -18,7 +24,7 @@
     "semantic-ui-react": "^0.84.0",
     "socket.io-client": "^2.2.0",
     "typescript": "3.2.4",
-    "web3": "^1.0.0-beta.41"
+    "web3": "1.0.0-beta.36"
   },
   "eslintConfig": {
     "extends": "react-app"
