wip wallet page unlock bar

--- a/packages/bitcore-wallet-ui/package.json
+++ b/packages/bitcore-wallet-ui/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "bitcore-client": "^8.0.0",
     "classnames": "^2.2.6",
     "history": "^4.7.2",
