--- a/packages/bitcore-wallet-ui/package.json
+++ b/packages/bitcore-wallet-ui/package.json
@@ -16,6 +16,7 @@
     "bitcore-client": "^8.0.0",
     "classnames": "^2.2.6",
     "history": "^4.7.2",
+    "immer-reducer": "^0.6.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
