--- a/packages/bitcore-wallet-ui/package.json
+++ b/packages/bitcore-wallet-ui/package.json
@@ -14,7 +14,9 @@
     "@material-ui/styles": "^3.0.0-alpha.10",
     "@types/react-redux": "^7.0.1",
     "bitcore-client": "^8.0.0",
+    "bn.js": "^4.11.8",
     "classnames": "^2.2.6",
+    "crypto-js": "^3.1.9-1",
     "history": "^4.7.2",
     "immer-reducer": "^0.6.0",
     "prop-types": "^15.6.2",
@@ -24,6 +26,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-swipeable-views": "^0.13.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
@@ -50,6 +53,7 @@
     "@types/react-dom": "16.0.11",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-swipeable-views": "^0.12.2",
     "@types/semantic-ui": "^2.2.6",
     "@types/socket.io-client": "^1.4.32"
   }
