--- a/packages/bitcore-wallet-ui/package.json
+++ b/packages/bitcore-wallet-ui/package.json
@@ -2,6 +2,7 @@
   "name": "bitcore-wallet-ui",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -13,10 +14,12 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
     "@types/react-redux": "^7.0.1",
+    "axios": "^0.18.0",
     "bitcore-client": "^8.0.0",
     "bn.js": "^4.11.8",
     "classnames": "^2.2.6",
     "crypto-js": "^3.1.9-1",
+    "ethereumjs-tx": "^1.3.7",
     "history": "^4.7.2",
     "immer-reducer": "^0.6.0",
     "prop-types": "^15.6.2",
@@ -33,7 +36,8 @@
     "semantic-ui-react": "^0.84.0",
     "socket.io-client": "^2.2.0",
     "typescript": "3.2.4",
-    "web3": "1.0.0-beta.36"
+    "web3": "1.0.0-beta.36",
+    "web3-utils": "^1.0.0-beta.46"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,6 +50,7 @@
   ],
   "devDependencies": {
     "@types/classnames": "^2.2.7",
+    "@types/ethereumjs-tx": "^1.0.1",
     "@types/history": "^4.7.2",
     "@types/jest": "23.3.13",
     "@types/node": "10.12.20",
