--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "scripts": {
     "build": "docker build -t bitcore-node .",
+    "watch": "./node_modules/.bin/lerna run watch --parallel",
     "postinstall": "npm run bootstrap && npm run compile",
     "bootstrap": "./node_modules/.bin/lerna bootstrap",
     "insight": "cd packages/insight && npm start",
