--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -71,6 +71,7 @@
   },
   "dependencies": {
     "JSONStream": "~1.3.1",
+    "abi-decoder": "^1.2.0",
     "async": "^2.5.0",
     "bitcore-client": "^8.1.0",
     "bitcore-lib": "^8.1.0",
