--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -45,6 +45,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@types/bn.js": "^4.11.4",
     "@types/chai": "^4.1.3",
     "@types/express": "^4.11.1",
     "@types/lodash": "^4.14.116",
@@ -77,6 +78,7 @@
     "bitcore-lib-cash": "^8.1.0",
     "bitcore-p2p": "^8.1.0",
     "bitcore-p2p-cash": "^8.1.0",
+    "bn.js": "^4.11.8",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
