--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -81,6 +81,9 @@
     "bn.js": "^4.11.8",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "ethereumjs-block": "^2.2.0",
+    "ethereumjs-devp2p": "^2.5.1",
+    "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
     "heapdump": "^0.3.12",
     "http": "0.0.0",
