--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -49,7 +49,9 @@
     "angular2-qrcode": "2.0.1",
     "bitcore-lib": "^8.1.1",
     "bitcore-lib-cash": "^8.1.1",
+    "bn.js": "^4.11.8",
     "bs58": "^4.0.1",
+    "elliptic": "^6.4.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lodash": "4.17.11",
