removed eth bitcore-client in api.js BWC, changed BWS version from 8.1.1 to 2.5.1 for BWC package.json devDependency

--- a/packages/bitcore-wallet-client/package.json
+++ b/packages/bitcore-wallet-client/package.json
@@ -37,7 +37,7 @@
     "superagent": "^3.4.1"
   },
   "devDependencies": {
-    "bitcore-wallet-service": "^8.1.1",
+    "bitcore-wallet-service": "2.5.1",
     "browserify": "^13.1.0",
     "chai": "^1.9.1",
     "coveralls": "^3.0.2",
