added export default deriver and transaction to crypto-wallet-core, changed Bitcore_[this.coin] to Bitcore_.btc

--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -3,8 +3,11 @@
   "version": "8.1.1",
   "description": "A multi-currency support library for address derivation, private key creation, and transaction creation",
   "main": "ts_build/index.js",
+  "types": "./ts_build/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf ./ts_build",
+    "watch": "./node_modules/.bin/tsc --watch",
+    "compile": "npm run clean && ./node_modules/.bin/tsc"
   },
   "keywords": [
     "multi-currency",
