--- a/packages/bitcore-wallet-client/package.json
+++ b/packages/bitcore-wallet-client/package.json
@@ -30,7 +30,7 @@
     "bitcore-lib": "^8.1.1",
     "bitcore-lib-cash": "^8.1.1",
     "bitcore-mnemonic": "^8.1.1",
-    "crypto-wallet-core": "file:../crypto-wallet-core/crypto-wallet-core-8.1.1.tgz",
+    "crypto-wallet-core": "^8.1.1",
     "json-stable-stringify": "^1.0.1",
     "lodash": "^4.17.11",
     "preconditions": "^2.2.1",
