--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -24,6 +24,7 @@
     "elliptic": "^6.4.1",
     "ethereumjs-tx": "^1.3.7",
     "ethereumjs-util": "^6.1.0",
+    "keccak": "^2.0.0",
     "secp256k1": "^3.5.0",
     "web3": "^1.0.0-beta.46"
   },
