--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -4,6 +4,8 @@
   "description": "A multi-currency support library for address derivation, private key creation, and transaction creation",
   "main": "ts_build/index.js",
   "scripts": {
+    "clean":"rm -rf ts_build",
+    "compile":"npm run clean && ./node_modules/.bin/tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
