--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -33,7 +33,11 @@
     "resync": "npm run tsc && node ./build/test/verification/resync.js",
     "test:unit": "npm run tsc && node ./build/test/runners/unit.js",
     "test:integration": "npm run tsc && node ./build/test/runners/integration.js",
-    "benchmark": "npm run tsc && node build/test/benchmark/benchmark.js"
+    "benchmark": "npm run tsc && node build/test/benchmark/benchmark.js",
+    "api": "npm run tsc && node build/src/workers/api.js",
+    "full": "npm run tsc && node build/src/workers/full.js",
+    "pruning": "npm run tsc && node build/src/workers/pruning.js",
+    "p2p": "npm run tsc && node build/src/workers/p2p.js"
   },
   "keywords": [
     "bitcore-node",
