--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -25,6 +25,7 @@
     "bitcore-lib": "^8.3.0",
     "bitcore-lib-cash": "^8.3.0",
     "bitcore-mnemonic": "^8.3.0",
+    "crypto-wallet-core": "^8.3.0",
     "commander": "^2.15.1",
     "elliptic": "^6.4.1",
     "ethereumjs-tx": "^1.3.7",
