--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -2,7 +2,8 @@
   "name": "crypto-wallet-core",
   "version": "8.3.0",
   "description": "A multi-currency support library for address derivation, private key creation, and transaction creation",
-  "main": "ts_build/index.js",
+  "main": "./ts_build/index.js",
+  "types": "./ts_build/index.d.ts",
   "scripts": {
     "clean": "rm -rf ts_build",
     "compile": "npm run clean && ./node_modules/.bin/tsc",
