Removing jest for mocha

--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rm -rf ts_build",
     "compile": "npm run clean && ./node_modules/.bin/tsc",
-    "test": "npx jest"
+    "test": "npx mocha -r ts-node/register tests/**/*.ts"
   },
   "keywords": [
     "multi-currency",
@@ -28,15 +28,17 @@
     "web3": "^1.0.0-beta.46"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/elliptic": "^6.4.3",
     "@types/ethereumjs-util": "^5.2.0",
-    "@types/jest": "^24.0.13",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^10.12.15",
     "@types/secp256k1": "^3.5.0",
+    "chai": "^4.2.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "jest": "^24.8.0",
-    "ts-jest": "^24.0.2",
+    "mocha": "^6.1.4",
+    "ts-node": "^8.1.0",
     "typescript": "^3.4.3"
   }
 }
