--- a/packages/bitcore-p2p-cash/package.json
+++ b/packages/bitcore-p2p-cash/package.json
@@ -73,5 +73,6 @@
     "gulp": "^4.0.0",
     "sinon": "^1.12.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
 }
