--- a/packages/bitcore-wallet-service/package.json
+++ b/packages/bitcore-wallet-service/package.json
@@ -105,5 +105,6 @@
       "name": "Matias Alejo Garcia",
       "email": "ematiu@gmail.com"
     }
-  ]
+  ],
+  "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
 }
