--- a/packages/bitcore-build/package.json
+++ b/packages/bitcore-build/package.json
@@ -56,5 +56,6 @@
     "karma-mocha": "^1.3.0",
     "lodash": "^4.17.4",
     "mocha": "^5.2.0"
-  }
+  },
+  "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
 }
