--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -55,5 +55,6 @@
     "mocha": "^5.0.5",
     "sinon": "^4.4.8",
     "typescript": "^3.2.2"
-  }
+  },
+  "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
 }
