--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -102,5 +102,6 @@
     "underscore": "^1.8.3",
     "web3": "1.0.0-beta.36",
     "winston": "^2.3.9"
-  }
+  },
+  "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
 }
