--- a/packages/bitcore-wallet-client/package.json
+++ b/packages/bitcore-wallet-client/package.json
@@ -55,5 +55,6 @@
     "test:ci": "npm run test",
     "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "docs": "./node_modules/.bin/jsdox lib/* lib/common lib/errors -o docs && cat README.header.md  docs/*.md LICENSE > README.md"
-  }
+  },
+  "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
 }
