--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -40,5 +40,6 @@
     "mocha": "^6.1.4",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.3"
-  }
+  },
+  "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
 }
