--- a/packages/bitcore-wallet-client/package.json
+++ b/packages/bitcore-wallet-client/package.json
@@ -30,6 +30,7 @@
     "bitcore-lib": "^8.3.4",
     "bitcore-lib-cash": "^8.3.4",
     "bitcore-mnemonic": "^8.3.4",
+    "crypto-wallet-core": "^8.3.4",
     "json-stable-stringify": "^1.0.1",
     "lodash": "^4.17.11",
     "preconditions": "^2.2.1",
