--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -49,6 +49,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@types/bn.js": "^4.11.4",
     "@types/chai": "^4.1.3",
     "@types/express": "^4.11.1",
     "@types/lodash": "^4.14.116",
@@ -75,6 +76,7 @@
   },
   "dependencies": {
     "JSONStream": "~1.3.1",
+    "abi-decoder": "^1.2.0",
     "async": "^2.5.0",
     "bitcore-client": "^8.3.4",
     "bitcore-lib": "^8.3.4",
@@ -83,6 +85,9 @@
     "bitcore-p2p-cash": "^8.3.4",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "ethereumjs-block": "^2.2.0",
+    "ethereumjs-devp2p": "^2.5.1",
+    "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
     "heapdump": "^0.3.12",
     "http": "0.0.0",
