browserify ts_build/src/index.js to bundle.js for copay browser, changed target in package.json to bundle.js

--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -2,7 +2,7 @@
   "name": "crypto-wallet-core",
   "version": "8.3.4",
   "description": "A multi-currency support library for address derivation, private key creation, and transaction creation",
-  "main": "./ts_build/src/index.js",
+  "main": "./bundle.js",
   "types": "./ts_build/src/index.d.ts",
   "scripts": {
     "clean": "rm -rf ts_build",
