--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -49,6 +49,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@types/bn.js": "^4.11.5",
     "@types/chai": "^4.1.3",
     "@types/express": "^4.11.1",
     "@types/lodash": "^4.14.116",
@@ -75,6 +76,7 @@
   },
   "dependencies": {
     "JSONStream": "~1.3.1",
+    "abi-decoder": "^2.0.1",
     "async": "^2.5.0",
     "bitcore-client": "^8.5.0",
     "bitcore-lib": "^8.5.0",
