update docker +docs

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "watch": "./node_modules/.bin/lerna run watch --parallel",
     "postinstall": "npm run bootstrap && npm run compile",
     "bootstrap": "./node_modules/.bin/lerna bootstrap",
-    "insight": "cd packages/insight && npm start",
-    "insight-previous": "cd ./packages/insight-previous && npm start",
+    "insight": "cd ./packages/insight && npm start",
     "node": "cd packages/bitcore-node && npm start",
     "bws": "cd packages/bitcore-wallet-service && npm start",
     "compile": "./node_modules/.bin/lerna run compile",
@@ -33,8 +32,6 @@
     "ci:bitcore-p2p-cash": "./ci.sh 'npm run test:bitcore-p2p-cash'",
     "test:bitcore-mnemonic": "cd ./packages/bitcore-mnemonic && npm run test",
     "ci:bitcore-mnemonic": "./ci.sh 'npm run test:bitcore-mnemonic'",
-    "test:insight-previous": "cd ./packages/insight-previous && npm run test",
-    "ci:insight-previous": "./ci.sh 'npm run test:insight-previous'",
     "test:insight": "cd ./packages/insight && npm run test",
     "ci:insight": "./ci.sh 'npm run test:insight'",
     "lerna:ci:unit": "./node_modules/.bin/lerna run test:ci --concurrency 1 --stream",
