--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -62,6 +62,7 @@
     "@types/socket.io": "^1.4.39",
     "@types/socket.io-client": "^1.4.32",
     "@types/through2": "^2.0.33",
+    "@types/web3": "^1.0.19",
     "@types/winston": "^2.3.9",
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
@@ -78,7 +79,6 @@
     "JSONStream": "~1.3.1",
     "abi-decoder": "^2.0.1",
     "async": "^2.5.0",
-    "crypto-wallet-core": "^8.5.1",
     "bitcore-client": "^8.5.1",
     "bitcore-lib": "^8.5.1",
     "bitcore-lib-cash": "^8.5.1",
@@ -86,6 +86,7 @@
     "bitcore-p2p-cash": "^8.5.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "crypto-wallet-core": "^8.5.1",
     "express": "^4.16.3",
     "heapdump": "^0.3.12",
     "http": "0.0.0",
@@ -103,7 +104,7 @@
     "socket.io-client": "^2.1.1",
     "through2": "^2.0.3",
     "underscore": "^1.8.3",
-    "web3": "1.0.0-beta.36",
+    "web3": "^1.2.1",
     "winston": "^2.3.9"
   },
   "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
