api test almost done

--- a/packages/bitcore-wallet-client/tsconfig.json
+++ b/packages/bitcore-wallet-client/tsconfig.json
@@ -12,6 +12,7 @@
     "module": "commonjs",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "target": "es5",
