--- a/packages/bitcore-wallet-client/package.json
+++ b/packages/bitcore-wallet-client/package.json
@@ -4,7 +4,8 @@
   "author": "BitPay Inc",
   "version": "8.6.0",
   "license": "MIT",
-  "main": "ts_build/index.js",
+  "main": "./ts_build/index.js",
+  "types": "./ts_build/index.d.js",
   "keywords": [
     "bitcoin",
     "copay",
@@ -24,8 +25,6 @@
     "url": "https://github.com/bitpay/bitcore-wallet-client/issues"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.136",
-    "@types/node": "^11.11.3",
     "ajv": "^6.10.0",
     "async": "^0.9.0",
     "awesome-typescript-loader": "^5.2.1",
@@ -41,6 +40,8 @@
     "superagent": "^3.4.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.136",
+    "@types/node": "^10.0.2",
     "bitcore-wallet-service": "^8.6.0",
     "browserify": "^13.1.0",
     "chai": "^1.9.1",
@@ -48,14 +49,14 @@
     "istanbul": "*",
     "mocha": "^5.2.0",
     "mongodb": "^2.0.27",
-    "sinon": "^7.1.1",
-    "uuid": "^2.0.1",
     "rimraf": "^2.6.3",
+    "sinon": "^7.1.1",
     "supertest": "*",
     "ts-node": "^8.0.3",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000",
-    "typescript-eslint-parser": "^22.0.0"
+    "typescript-eslint-parser": "^22.0.0",
+    "uuid": "^2.0.1"
   },
   "scripts": {
     "start": "npm run clean && npm run tsc && node app.js",
