--- a/packages/bitcore-wallet-client/package.json
+++ b/packages/bitcore-wallet-client/package.json
@@ -61,7 +61,7 @@
   "scripts": {
     "start": "npm run clean && npm run tsc && node app.js",
     "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --reporter spec test",
-    "test": "./node_modules/.bin/mocha --exit",
+    "test": "npm run compile && ./node_modules/.bin/mocha --exit",
     "test:ci": "npm run test",
     "docs": "./node_modules/.bin/jsdox lib/* lib/common lib/errors -o docs && cat README.header.md  docs/*.md LICENSE > README.md",
     "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
