--- a/packages/bitcore-wallet-client/package.json
+++ b/packages/bitcore-wallet-client/package.json
@@ -4,8 +4,8 @@
   "author": "BitPay Inc",
   "version": "8.6.0",
   "license": "MIT",
-  "main": "./ts_build/index.js",
-  "types": "./ts_build/index.d.js",
+  "main": "ts_build/index.js",
+  "types": "ts_build/index.d.js",
   "keywords": [
     "bitcoin",
     "copay",
@@ -66,7 +66,7 @@
     "docs": "./node_modules/.bin/jsdox lib/* lib/common lib/errors -o docs && cat README.header.md  docs/*.md LICENSE > README.md",
     "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "compile": "npm run tsc",
-    "tsc": "npm run clean &&./node_modules/.bin/tsc",
+    "tsc": "npm run clean && ./node_modules/.bin/tsc",
     "build": "tsc && npm run lint",
     "clean": "rimraf ./ts_build",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
