--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -23,7 +23,7 @@
     "compile": "npm run tsc",
     "docs:build-html": "typedoc --out ./docs/html --tsconfig tsconfig.json ./src",
     "docs:build-json": "typedoc --json ./docs/json --tsconfig tsconfig.json ./src",
-    "tsc": "npm run clean && ./node_modules/.bin/tsc",
+    "tsc": "npm run clean && tsc",
     "test": "npm run tsc && node ./build/test/runners/unit.js && node ./build/test/runners/integration.js",
     "test:ci": "npm run test",
     "test:ci:integration": "npm run test:integration",
@@ -72,7 +72,7 @@
     "mocha": "^5.0.5",
     "sinon": "^4.4.8",
     "supertest": "^3.0.0",
-    "typescript": "^3.2.2",
+    "typescript": "^3.3.4000",
     "typescript-eslint-parser": "^15.0.0"
   },
   "dependencies": {
