--- a/packages/insight/package.json
+++ b/packages/insight/package.json
@@ -50,6 +50,7 @@
     "bitcore-lib": "^8.6.0",
     "bitcore-lib-cash": "^8.6.0",
     "bs58": "^4.0.1",
+    "chart.js": "^2.8.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lodash": "4.17.11",
