--- a/packages/bitcore-p2p/package.json
+++ b/packages/bitcore-p2p/package.json
@@ -8,7 +8,8 @@
     "test": "gulp test",
     "test:ci": "npm run test",
     "coverage": "gulp coverage",
-    "build": "gulp"
+    "build": "gulp",
+    "pub": "npm run build && npm publish"
   },
   "keywords": [
     "bitcoin",
