--- a/packages/bitcore-build/package.json
+++ b/packages/bitcore-build/package.json
@@ -4,7 +4,8 @@
   "description": "A helper for common tasks to build bitcore modules'",
   "main": "index.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "pub": "npm  publish"
   },
   "repository": {
     "type": "git",
