--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -83,10 +83,9 @@
     "bitcore-lib-cash": "8.7.3",
     "bitcore-p2p": "8.7.3",
     "bitcore-p2p-cash": "8.7.3",
-    "bitcore-wallet-client": "8.7.3",
-    "body-parser": "1.18.3",
-    "cors": "2.8.4",
     "crypto-wallet-core": "8.7.3",
+    "body-parser": "1.19.0",
+    "cors": "2.8.4",
     "heapdump": "0.3.12",
     "http": "0.0.0",
     "lodash": "4.17.11",
@@ -103,7 +102,7 @@
     "socket.io-client": "2.1.1",
     "through2": "2.0.3",
     "underscore": "1.8.3",
-    "web3": "1.2.1",
+    "web3": "^1.2.1",
     "winston": "3.2.0"
   },
   "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
