--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -24,7 +24,7 @@
     "elliptic": "6.4.1",
     "ethereumjs-tx": "1.3.7",
     "ethereumjs-util": "6.0.0",
-    "web3": "1.2.1"
+    "web3": "^1.2.1"
   },
   "devDependencies": {
     "@types/chai": "4.1.7",
