Fix Copay compile error exists is not a function

--- a/packages/crypto-wallet-core/tsconfig.json
+++ b/packages/crypto-wallet-core/tsconfig.json
@@ -21,7 +21,7 @@
   },
   "include": [
     "./src/**/*.ts",
-    "./tests/**/*.ts",
+    "./tests/**/*.ts"
   ],
   "exclude": [
     "node_modules"
