--- a/packages/crypto-wallet-core/package.json
+++ b/packages/crypto-wallet-core/package.json
@@ -3,11 +3,18 @@
   "version": "8.7.3",
   "description": "A multi-currency support library for address derivation, private key creation, and transaction creation",
   "main": "./ts_build/src/index.js",
+  "browser": "./browser/browser.js",
   "types": "./ts_build/src/index.d.ts",
   "scripts": {
+    "build": "node browserify.js",
     "clean": "rm -rf ts_build",
-    "compile": "npm run clean && ./node_modules/.bin/tsc",
+    "compile": "npm run clean && ./node_modules/.bin/tsc && npm run build",
     "test": "npx mocha -r ts-node/register tests/**/*.ts"
+  },
+  "browserify-shim": {
+    "bitcore-lib": "global:bitcore-lib",
+    "bitcore-lib-cash": "global:bitcore-lib-cash",
+    "idna-map": "./idna-map.js"
   },
   "keywords": [
     "multi-currency",
@@ -24,6 +31,7 @@
     "elliptic": "6.4.1",
     "ethereumjs-tx": "1.3.7",
     "ethereumjs-util": "6.0.0",
+    "secp256k1": "3.7.1",
     "web3": "1.2.1"
   },
   "devDependencies": {
@@ -32,13 +40,16 @@
     "@types/ethereumjs-util": "5.2.0",
     "@types/mocha": "5.2.6",
     "@types/node": "10.12.15",
-    "@types/web3": "1.0.19",
     "@types/secp256k1": "3.5.0",
+    "@types/web3": "1.0.19",
+    "browserify": "16.5.0",
+    "browserify-shim": "3.8.14",
     "chai": "4.2.0",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-plugin-import": "2.8.0",
     "mocha": "6.1.4",
     "ts-node": "8.1.0",
+    "tsify": "4.0.1",
     "typescript": "3.3.4000"
   },
   "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
