--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -84,9 +84,9 @@
     "bitcore-p2p": "^8.8.3",
     "bitcore-p2p-cash": "^8.8.3",
     "bitcore-wallet-client": "^8.8.3",
-    "crypto-wallet-core": "^8.8.3",
-    "body-parser": "1.19.0",
+    "body-parser": "1.18.3",
     "cors": "2.8.4",
+    "crypto-wallet-core": "^8.8.3",
     "heapdump": "0.3.12",
     "http": "0.0.0",
     "lodash": "4.17.11",
@@ -103,7 +103,7 @@
     "socket.io-client": "2.1.1",
     "through2": "2.0.3",
     "underscore": "1.8.3",
-    "web3": "^1.2.1",
+    "web3": "1.2.1",
     "winston": "3.2.0"
   },
   "gitHead": "012cc0216a9bc6b195035855bd17149bad41acd1"
