installing package source maps

--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -39,6 +39,7 @@
     "request": "2.87.0",
     "request-promise-native": "1.0.5",
     "secp256k1": "3.5.0",
+    "source-map-support": "^0.5.13",
     "web3": "1.0.0-beta.46"
   },
   "devDependencies": {
